--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chat App</title>
+<meta charset="UTF-8">
+<title>Socket IO Chat with Node!</title>
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Welcome to my chat app!!</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <a href="/contact">Contact</a>
-  <a href="/portfolio">Portfolio</a>
+<input type="text" class="nickname" placeholder="What is your nickname?">
+<ul id="messages"></ul>
+<form>
+<input class="message" type="text" id="m" autocomplete="off">
+<button>send</button>
+</form>
 </body>
 </html>
