--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Socket IO Chat with Node!</title>
-<link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Express is easy!</title>
 </head>
 <body>
-<input type="text" class="nickname" placeholder="What is your nickname?">
-<ul id="messages"></ul>
-<form>
-<input class="message" type="text" id="m" autocomplete="off">
-<button>send</button>
-</form>
+  <h1>first Express app!</h1>  
 </body>
 </html>
